I was following a link from the master's web ui directly to a tablet server's web ui for one of its tablets, and it crashed the TS. After restarting it, I could see that the tablet was listed as TABLET_DATA_TOMBSTONED. It obviously shouldn't crash.
The reason the master is still listing that tablet server for that tablet is because the tablet isn't able to make a config change, so it has a stale one.
- is duplicated by
-
KUDU-1606 Crasher when accessing tablet page of failed tablet
-
- Resolved
-