KUDU-1545. Fix crash when visiting tablet page for tombstoned tablet

This page was previously accessing peer->consensus() which could be NULL
in a tombstoned tablet.

Change-Id: I7d53d2080c476fe02e2c4ab5482fe80387199377
Reviewed-on: http://gerrit.cloudera.org:8080/5280
Reviewed-by: Dan Burkert <danburkert@apache.org>
Reviewed-by: Will Berkeley <wdberkeley@gmail.com>
Tested-by: Kudu Jenkins